add filters for todolist